<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="keypad"
            type="com.epam.rd.advphone.views.KeypadFragment" />

    </data>

    <LinearLayout
        android:id="@+id/keypad_fragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".views.KeypadFragment">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="10"
            android:orientation="vertical">

            <TextView
                android:id="@+id/text_show_contact"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:gravity="center_vertical"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/edit_number"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="4"
                android:autofillHints=""
                android:ems="10"
                android:gravity="center"
                android:hint="@string/number"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:textSize="24sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button_number_one"
                style="@style/ButtonStyle"
                android:tag="1"
                android:text="@string/button_one" />

            <Button
                android:id="@+id/button_number_two"
                style="@style/ButtonStyle"
                android:tag="2"
                android:text="@string/button_two" />

            <Button
                android:id="@+id/button_number_three"
                style="@style/ButtonStyle"
                android:tag="3"
                android:text="@string/button_three" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button_number_four"
                style="@style/ButtonStyle"
                android:tag="4"
                android:text="@string/button_four" />

            <Button
                android:id="@+id/button_number_five"
                style="@style/ButtonStyle"
                android:tag="5"
                android:text="@string/button_five" />

            <Button
                android:id="@+id/button_number_six"
                style="@style/ButtonStyle"
                android:tag="6"
                android:text="@string/button_six" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button_number_seven"
                style="@style/ButtonStyle"
                android:tag="7"
                android:text="@string/button_seven" />

            <Button
                android:id="@+id/button_number_eight"
                style="@style/ButtonStyle"
                android:tag="8"
                android:text="@string/button_eight" />

            <Button
                android:id="@+id/button_number_nine"
                style="@style/ButtonStyle"
                android:tag="9"
                android:text="@string/button_nine" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button_asterisk"
                style="@style/ButtonStyle"
                android:tag="*"
                android:text="@string/button_asterisk" />

            <Button
                android:id="@+id/button_number_zero"
                style="@style/ButtonStyle"
                android:tag="0"
                android:text="@string/button_zero" />

            <Button
                android:id="@+id/button_sharp"
                style="@style/ButtonStyle"
                android:tag="#"
                android:text="@string/button_sharp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:gravity="center"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <Button
                    android:id="@+id/button2"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:background="@null" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <ImageButton
                    android:id="@+id/button_call"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:background="@drawable/circle_button"
                    android:onClick="@{() -> keypad.call()}"
                    app:srcCompat="@drawable/phone" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <ImageButton
                    android:id="@+id/imageButton_backspase"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="5dp"
                    android:background="@null"
                    android:contentDescription="@string/backspase"
                    app:srcCompat="@drawable/backspace" />
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</layout>
