<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="contact"
            type="com.epam.rd.advphone.models.Contact" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp">

        <EditText
            android:id="@+id/contactNameTv"
            style="@style/contactActivityStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/contact_name"
            android:inputType="text"
            android:text="@{contact.name}"
            tools:targetApi="O"
            android:autofillHints="" />

        <EditText
            android:id="@+id/contactPhoneTv"
            style="@style/contactActivityStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/contact_phone"
            android:inputType="phone"
            android:text="@{contact.phone}"
            tools:targetApi="O"
            android:autofillHints="" />

        <EditText
            android:id="@+id/contactEmail"
            style="@style/contactActivityStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/contact_email"
            android:inputType="textEmailAddress"
            android:text="@{contact.email}"
            android:maxLength="40"
            tools:targetApi="O"
            android:autofillHints="" />

    </LinearLayout>
</layout>