<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:grid="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="contacts"
            type="java.util.List" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolBar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            style="@style/toolBarStyle"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="8dp">

            <com.google.android.flexbox.FlexboxLayout
                android:id="@+id/recipientsContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                grid:alignItems="center"
                grid:flexDirection="row"
                grid:flexWrap="wrap" />

            <EditText
                android:id="@+id/smsText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentBottom="true"
                android:layout_toStartOf="@id/sendSmsBtn"
                android:background="@drawable/sms_recipient_text_field"
                android:hint="@string/sms_text"
                android:inputType="textCapSentences|textMultiLine"
                android:layout_marginEnd="8dp"
                android:padding="16dp"
                android:autofillHints=""
                tools:targetApi="O" />

            <ImageButton
                android:id="@+id/sendSmsBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:backgroundTint="@android:color/transparent"
                android:contentDescription="@string/arrow_up"
                android:src="@drawable/ic_arrow_up_selector"
                android:text="@string/send_sms" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_above="@+id/sendSmsBtn"
                android:layout_alignStart="@+id/sendSmsBtn"
                android:layout_alignEnd="@+id/sendSmsBtn">

                <TextView
                    android:id="@+id/smsCount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/zero" />

                <TextView
                    android:id="@+id/divider"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/number_divider" />

                <TextView
                    android:id="@+id/smsTextLength"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/zero" />
            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/concreteSmsRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_above="@+id/smsText"
                android:layout_below="@+id/recipientsContainer"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="20dp" />
        </RelativeLayout>
    </LinearLayout>
</layout>